--- a/src/components/Assets/Assets.module.scss
+++ b/src/components/Assets/Assets.module.scss
@@ -6,8 +6,14 @@
   margin-bottom: 24px;
 }
 
-.boardsContainer {
+.assetsContainer {
   display: flex;
   flex-direction: row;
   gap: 24px;
+  flex-wrap: wrap;
+  flex-grow: 1;
+}
+
+.container {
+  margin-top: 72px;
 }
