--- a/src/components/Boards/components/BoardItem/BoardItem.module.scss
+++ b/src/components/Boards/components/BoardItem/BoardItem.module.scss
@@ -3,11 +3,13 @@
   width: 204px;
   border-radius: 4px;
   position: relative;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 
   img {
     object-fit: cover;
     height: 100%;
-    width: 100%;
     border-radius: 4px;
   }
 }
@@ -21,7 +23,6 @@
   background-color: rgba(0,0,0,0.5);
   border-radius: 4px;
 
-  
   h4 {
     color: white;
     font-size: 1.25rem;
@@ -29,3 +30,12 @@
     font-weight: 400;
   }
 }
+
+.hover {
+  display: none;
+
+  &:hover {
+    display: block;
+  }
+}
+
